@@ -1,6 +1,8 @@
 [metadata]
 name = dulwich
-author = Jelmer Vernooĳ
+# Avoid unicode characters, because setuptools doesn't
+# like them. See https://github.com/pypa/setuptools/issues/1062
+author = Jelmer Vernooij
 author_email = jelmer@jelmer.uk
 home-page = https://www.dulwich.io/
 description = file:README.md
